# hello-click

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr.yml
src/hello_click/: __init__.py  cli.py
src/hello_click/command_1/: __init__.py  command_1.py
src/hello_click/command_2/: __init__.py  command_2.py
tests/: test_cli.py  test_command_1.py  test_command_2.py
